Issue #SB-18775 UI - rtl alignment issues toc, profile, search list view more page (refer the attachments)

--- a/src/client/src/app/modules/content-consumption/components/content-header/content-header.component.scss
+++ b/src/client/src/app/modules/content-consumption/components/content-header/content-header.component.scss
@@ -1,6 +1,14 @@
 @import "variables";
 @import "mixins/mixins";
 
+:host{
+  svg.svgback-icon{
+    html[dir="rtl"] & {
+      transform: rotate(180deg);
+    }
+   }
+  }
+
 .content-header {
   background:#FAFAFA;
   min-height: calculateRem(14px);
